# TracR

./: README.md  meson.build  meson_options.txt
.github/workflows/: tracr.yml
examples/: README.md  meson.build
examples/bash_scripts/: multiproc_run.sh
examples/pytracr/: flow.py  simple.py  threads.py
examples/tracr/: flow.cpp  flow_alltoall.cpp  performance_test.cpp
include/pytracr/: README.md  meson.build  pytracr.cpp
include/tracr/: marker_management_engine.hpp  tracr.hpp  tracr_core.hpp
postprocessing/: tracr_process.cpp
