option('buildPyTraCR', type : 'boolean', value : false,
       description: 'Indicates whether to build the TraCR Python API'
)

option('buildTests', type : 'boolean', value : false,
       description: 'Indicates whether to build test apps'
)

option('buildExamples', type : 'boolean', value : false,
       description: 'Indicates whether to build example apps'
)

option('compileWarningsAsErrors', type : 'boolean', value : false,
       description: 'Indicates whether a compilation warning should result in a fatal error. This is useful for CI testing but may result in inconveniences for normal users, hence it should be false by default'
) 
